--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "browser-router": "^0.2.0",
     "flowbite-react": "^0.7.3",
     "react": "^18.2.0",
